# huproof

./: .gitignore  README.md  TESTING_PLAN.md  env.example  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
circuits/: README.md  keystroke.circom  package-lock.json  package.json
huproof/: __init__.py  app.py
huproof/api/: enroll.py  login.py  logout.py
huproof/config/: settings.py
huproof/core/: __init__.py  auth.py  calibration.py  challenge.py  crypto.py  logging.py  metrics.py  origin.py  ratelimit.py  security.py  zk.py
huproof/db/: __init__.py  models.py  session.py
huproof/schemas/: __init__.py  enroll.py  login.py
tests/: conftest.py  test_calibration.py  test_challenge.py  test_crypto.py  test_enroll_flow.py  test_health.py  test_login_integration.py  test_logout.py  test_metrics.py  test_rate_limiting.py  test_security.py  test_security_input.py  test_synthetic_features.py
web/: index.html  package.json  tsconfig.json
web/src/: calibration.ts  keystrokes.ts  main.ts  prover.ts  storage.ts  zk.ts
